--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,15 +5,52 @@ body {
     padding: 0;
 }
 
-h1,
-h2,
-h3 {
+h1, h2, h3, h4, h5 {
     text-transform: uppercase;
+}
+
+@font-face {
+    font-family: "Rapor";
+    src: url('../fonts/FONTS-20230331T024759Z-001/FONTS/rapor/Rapor\ Regular.ttf');
+}
+
+@font-face {
+    font-family: "Rapor-Light";
+    src: url('../fonts/FONTS-20230331T024759Z-001/FONTS/rapor/Rapor\ Light.ttf');
+}
+
+@font-face {
+    font-family: "Beto-Bold";
+    src: url('../fonts/FONTS-20230331T024759Z-001/FONTS/bw-beto/Bw\ Beto\ Bold.otf');
+}
+
+p,li,a,h3,h4,h5{
+    font-family: "Rapor";
+}
+
+h1,h2{
+    font-family: "Beto-Bold";
+}
+
+h1{
+    font-size: 40px;
+    letter-spacing: 0.20em;
+    background: -webkit-linear-gradient(#c09b71, #8c683e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: 8c683e;  
+}
+
+h2{
+    background: -webkit-linear-gradient(#c09b71, #8c683e);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    color: 8c683e;   
 }
 
 .container {
     margin: 0 auto;
-    width: 950px;
+    width: 980px;
 }
 
 .container_page {
@@ -25,30 +62,66 @@ h3 {
     width: 2000px;
 }
 
-#navigation_top {
+.navigation_top {
+    box-sizing: border-box;
     width: 100%;
     position: fixed;
-    padding: 10px;
     z-index: 1;
-
+    transition: .5s;
 }
 
-#navigation_top .wrap {
+.navigation_top_color {
+    box-sizing: border-box;
+    width: 100%;
+    position: fixed;
+    z-index: 1;
+    background-color: #3c4544;
+}
+
+.navigation_top .container{
+    padding-top: 5px;
+}
+
+
+.navigation_top .wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
+
 nav ul {
     display: flex;
+    align-items: center;
+    justify-content: center;
     list-style: none;
 }
 
 nav ul li {
+    display: flex;
     padding: 0 20px;
 }
 
+nav ul .background-gradient {
+    box-sizing: border-box;
+    background: linear-gradient(to bottom right, #c09b71, #8c683e);
+    padding: 10px 10px 10px 10px;
+}
+
+nav ul .nav-whatsapp a{
+    padding-left: 3px;
+}
+
+nav ul li .nav-whatsapp-logo{
+  
+    height: 18px;
+    width: 18px;
+    background-image: url(../icons/WHATS@3x.png);
+    background-size: cover;
+}
+
 nav ul li a {
+    font-size: 15px;
     text-decoration: none;
     color: white;
 }
@@ -65,6 +138,19 @@ header {
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.info_header h5{
+    text-decoration: none;
+    font-size: 24px;
+    font-family: "Rapor-Light";
+    color: white;
+    margin: 0;
+    letter-spacing: .20em;
+}
+
+.info_header h1{
+    margin: 0;
 }
 
 #separator {
