--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
 }
 
-h1, h2, h3, h4, h5 {
+h1, h2, h3, h4, h5, h6 {
     text-transform: uppercase;
 }
 
@@ -24,8 +24,17 @@ h1, h2, h3, h4, h5 {
     src: url('../fonts/FONTS-20230331T024759Z-001/FONTS/bw-beto/Bw\ Beto\ Bold.otf');
 }
 
+@font-face {
+    font-family: "Beto-Black";
+    src: url('../fonts/FONTS-20230331T024759Z-001/FONTS/bw-beto/Bw\ Beto\ Black.otf');
+}
+
 p,li,a,h3,h4,h5{
     font-family: "Rapor";
+}
+
+h6{
+    font-family: "Rapor-Light";
 }
 
 h1,h2{
@@ -37,6 +46,7 @@ h1{
     letter-spacing: 0.20em;
     background: -webkit-linear-gradient(#c09b71, #8c683e);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     color: 8c683e;  
 }
@@ -44,6 +54,7 @@ h1{
 h2{
     background: -webkit-linear-gradient(#c09b71, #8c683e);
     -webkit-background-clip: text;
+    background-clip: text;
     -webkit-text-fill-color: transparent;
     color: 8c683e;   
 }
@@ -124,12 +135,21 @@ nav ul li a {
     font-size: 15px;
     text-decoration: none;
     color: white;
+    background-image: linear-gradient(to bottom right, #c09b71, #8c683e);
+    background-position: 0% 100%;
+    background-repeat: no-repeat;
+    background-size: 0% 2px;
+    transition: background-size .3s;
+}
+
+nav ul li a:hover, a:focus {
+    background-size: 100% 2px;
 }
 
 /*Estilos header*/
 
 header {
-    height: 550px;
+    height: 650px;
     width: 100%;
     background-image: url(../cover_background.jpg);
     background-size: cover;
@@ -165,20 +185,35 @@ header {
 }
 
 .nosotros_bienvenido {
-    height: 500px;
+    height: 550px;
     background-color: #3c4544;
 }
 
 .section1 {
     height: 300px;
-    width: 30%;
-    padding-top: 50px;
+    width: 50%;
+    padding-top: 40px;
 }
 
 .section1 .bienvenido {
     display: flex;
     align-items: center;
     justify-content: left;
+    color: white;
+}
+
+.side-line{
+    color: transparent;
+    background-image: linear-gradient(to bottom right, #c09b71, #8c683e);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 100% 2px;
+    margin-right: 5px;
+}
+
+.section1 .bienvenido3 p{
+    font-size: 16px;
+    color:white;
 }
 
 .section1 .bienvenido2 h2 {
@@ -211,6 +246,18 @@ header {
     align-items: center;
 }
 
+.content {
+    text-align: center;
+}
+
+.content h1, h6{
+    letter-spacing: 0;
+    text-align: center;
+    margin-bottom: 0;
+    margin-top: 0;
+    color: white;
+}
+
 .section3 .minutos {
     width: 33.3%;
     display: flex;
@@ -236,7 +283,25 @@ header {
     padding-top: 5px;
 }
 
+.bienvenido4{
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.bienvenido4 .arrow{
+    margin-left:10px ;
+    width: 14px;
+    height: 12px;
+    background-image:url(../icons/left-arrow@3x.png);
+    background-size: cover;
+    
+}
+
 .bienvenido4 a {
+    display: flex;
+    align-items: center;
+    justify-content: left;
     text-decoration: none;
     color: white;
 }
@@ -266,9 +331,11 @@ header {
     height: 500px;
     box-sizing: border-box;
     padding-left: 200px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 7%;
+}
 
+.nosotros_contamos1 .mitad2 h6{
+    color: black;
 }
 
 .nosotros_contamos1 .mitad2 .bienvenido {
@@ -353,9 +420,12 @@ header {
     height: 500px;
     box-sizing: border-box;
     padding-right: 145px;
-    /*padding-left: 50px;*/
-    padding-top: 100px;
+    padding-top: 7%;
     padding-bottom: 100px;
+}
+
+.nosotros_armonia1 .mitad h6{
+    color: black;
 }
 
 .nosotros_armonia1 .mitad2 {
